set01/problem04_debug_log.txt
PS C:\Users\Manasa\Desktop\c-activity-set1\set01> gcc -g -O0 problem04.c -o problem04.exe
problem04.c: In function 'input':
problem04.c:5:9: error: 'a' redeclared as different kind of symbol
     int a,b,n;
         ^
problem04.c:3:17: note: previous definition of 'a' was here
 void input(int *a,int *b)
                 ^
problem04.c:5:11: error: 'b' redeclared as different kind of symbol
     int a,b,n;
           ^
problem04.c:3:24: note: previous definition of 'b' was here
 void input(int *a,int *b)
                        ^
problem04.c: In function 'add':
problem04.c:12:9: error: 'sum' redeclared as different kind of symbol
     int sum;
         ^~~
problem04.c:10:27: note: previous definition of 'sum' was here
 void add(int a,int b,int *sum)
                           ^~~
problem04.c:13:5: error: invalid type argument of unary '*' (have 'int')
     *sum=a+b;
     ^~~~
PS C:\Users\Manasa\Desktop\c-activity-set1\set01> gcc -g -O0 problem04.c -o problem04.exe
problem04.c: In function 'input':
problem04.c:5:9: error: 'a' redeclared as different kind of symbol
     int a,b;
         ^
problem04.c:3:17: note: previous definition of 'a' was here
 void input(int *a,int *b)
                 ^
problem04.c:5:11: error: 'b' redeclared as different kind of symbol
     int a,b;
           ^
problem04.c:3:24: note: previous definition of 'b' was here
 void input(int *a,int *b)
                        ^
problem04.c: In function 'add':
problem04.c:12:9: error: 'sum' redeclared as different kind of symbol
     int sum;
         ^~~
problem04.c:10:27: note: previous definition of 'sum' was here
 void add(int a,int b,int *sum)
                           ^~~
problem04.c:13:5: error: invalid type argument of unary '*' (have 'int')
     *sum=a+b;
     ^~~~
PS C:\Users\Manasa\Desktop\c-activity-set1\set01> gcc -g -O0 problem04.c -o problem04.exe
problem04.c: In function 'input':
problem04.c:5:9: error: 'a' redeclared as different kind of symbol
     int a,b;
         ^
problem04.c:3:17: note: previous definition of 'a' was here
 void input(int *a,int *b)
                 ^
problem04.c:5:11: error: 'b' redeclared as different kind of symbol
     int a,b;
           ^
problem04.c:3:24: note: previous definition of 'b' was here
 void input(int *a,int *b)
                        ^
PS C:\Users\Manasa\Desktop\c-activity-set1\set01> gcc -g -O0 problem04.c -o problem04.exe
PS C:\Users\Manasa\Desktop\c-activity-set1\set01> gdb .\problem04.exe
GNU gdb (GDB) 7.6.1
Copyright (C) 2013 Free Software Foundation, Inc.
License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html>
This is free software: you are free to change and redistribute it.
There is NO WARRANTY, to the extent permitted by law.  Type "show copying"
and "show warranty" for details.
This GDB was configured as "mingw32".
For bug reporting instructions, please see:
<http://www.gnu.org/software/gdb/bugs/>...
Reading symbols from C:\Users\Manasa\Desktop\c-activity-set1\set01\problem04.exe...done.
(gdb) b main
Breakpoint 1 at 0x4014e6: file problem04.c, line 20.
(gdb) r
Starting program: C:\Users\Manasa\Desktop\c-activity-set1\set01/.\problem04.exe 
[New Thread 18756.0xc44]
[New Thread 18756.0x794]

Breakpoint 1, main () at problem04.c:20
20          input(&a,&b);
(gdb) n
enter the value for a and b
1 
6
21          add(a,b,&sum);
(gdb) n
22          output(a,b,sum);
(gdb) p sum
$1 = 7
(gdb) c
Continuing.
the sum of 1 and 6 is 7
[Inferior 1 (process 18756) exited normally]
(gdb) q